--- a/PokiFlo/MainWindow.xaml
+++ b/PokiFlo/MainWindow.xaml
@@ -5,8 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PokiFlo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="PokiFlo" MinHeight="450" MinWidth="800" Height="450" Width="800"
+        Background="Transparent" AllowsTransparency="True" WindowStyle="None">
+    <Grid x:Name="grid">
+        <!--<Button Name="button_mainmenu" Content="Hauptmenü" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="35" Width="100"/>
+        <Button Name="button_fightarena" Content="Kampfarena" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" Height="35" Width="100"/>
+        <Button Name="button_inventory" Content="Inventar" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Height="35" Width="100"/>
+        <Button Name="button_statistic" Content="Statistiken" HorizontalAlignment="Left" Margin="325,10,0,0" VerticalAlignment="Top" Height="35" Width="100"/>-->
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Border CornerRadius="10" x:Name="Farben" Grid.RowSpan="4" Grid.ColumnSpan="6">
+            <Border.Background>
+                <LinearGradientBrush>
+                    <GradientStop Color="#add8e6" Offset="0.1"/>
+                    <GradientStop Color="#6a5acd" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+
+        <!--Bedienmenü-->
+        <Button Name="Button_Main_Mainmenue" Content="Hauptmenü" Grid.Column="0" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Name="Button_Main_Fightarena" Content="Kampfarena" Grid.Column="1" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Name="Button_Main_Inventory" Content="Inventar" Grid.Column="2" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Name="Button_Main_Statistic" Content="Statistiken" Grid.Column="3" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Name="Button_Main_Settings" Content="Einstellungen" Grid.Column="4" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        
+        <!--Fenstermenü-->
+        <Button Margin="0,5,30,30" Width="20" Height="20" x:Name="Btn_Minimize" Grid.Column="5" VerticalAlignment="Top" HorizontalAlignment="Right">
+            <Viewbox>
+                <TextBlock Margin="10,10,10,0" FontWeight="Bold">-</TextBlock>
+            </Viewbox>
+        </Button>
+        <Button Margin="0,5,5,30" Width="20" Height="20" x:Name="Btn_Close" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="5">
+            <Viewbox>
+                <TextBlock Margin="10,0,10,0" FontWeight="Bold">X</TextBlock>
+            </Viewbox>
+        </Button>
+
+        <Frame x:Name="Main" Grid.Row="1" Grid.ColumnSpan="5" NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
