--- a/PokiFlo/Einstellungen.xaml
+++ b/PokiFlo/Einstellungen.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="PokiFlo.Hauptmenue"
+﻿<Page x:Class="PokiFlo.Einstellungen"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,11 @@
       xmlns:local="clr-namespace:PokiFlo"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Hauptmenue"
+      Title="Einstellungen"
       Background="#4DFFFFFF">
 
     <Grid>
-        <Button Content="Button" Margin="164,121,164,130" Click="Button_Click"/>
+        <Label Content="Label" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48" FontFamily="Arial"/>
 
     </Grid>
 </Page>
