--- a/PokiFlo/MainWindow.xaml
+++ b/PokiFlo/MainWindow.xaml
@@ -33,24 +33,24 @@
         </Border>
 
         <!--Bedienmenü-->
-        <Button Name="Button_Main_Mainmenue" Content="Hauptmenü" Grid.Column="0" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Name="Button_Main_Mainmenue" Content="Hauptmenü" Grid.Column="0" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Main_Mainmenue_Click"/>
         <Button Name="Button_Main_Fightarena" Content="Kampfarena" Grid.Column="1" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Button Name="Button_Main_Inventory" Content="Inventar" Grid.Column="2" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Button Name="Button_Main_Statistic" Content="Statistiken" Grid.Column="3" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Name="Button_Main_Settings" Content="Einstellungen" Grid.Column="4" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        
+        <Button Name="Button_Main_Settings" Content="Einstellungen" Grid.Column="4" Grid.Row="0" Width="80" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Main_Settings_Click"/>
+
         <!--Fenstermenü-->
-        <Button Margin="0,5,30,30" Width="20" Height="20" x:Name="Btn_Minimize" Grid.Column="5" VerticalAlignment="Top" HorizontalAlignment="Right">
+        <Button Margin="0,5,30,30" Width="20" Height="20" x:Name="Btn_Minimize" Grid.Column="5" VerticalAlignment="Top" HorizontalAlignment="Right" Click="Btn_Minimize_Click">
             <Viewbox>
                 <TextBlock Margin="10,10,10,0" FontWeight="Bold">-</TextBlock>
             </Viewbox>
         </Button>
-        <Button Margin="0,5,5,30" Width="20" Height="20" x:Name="Btn_Close" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="5">
+        <Button Margin="108,5,0,0" Width="20" Height="20" x:Name="Btn_Close" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="5" Click="Btn_Close_Click">
             <Viewbox>
                 <TextBlock Margin="10,0,10,0" FontWeight="Bold">X</TextBlock>
             </Viewbox>
         </Button>
 
-        <Frame x:Name="Main" Grid.Row="1" Grid.ColumnSpan="5" NavigationUIVisibility="Hidden" />
+        <Frame x:Name="Main" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="6" NavigationUIVisibility="Hidden" Source="Hauptmenue.xaml"/>
     </Grid>
 </Window>
