--- a/PokiFlo/Statistic.xaml
+++ b/PokiFlo/Statistic.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="PokiFlo.Einstellungen"
+﻿<Page x:Class="PokiFlo.Statistic"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,10 @@
       xmlns:local="clr-namespace:PokiFlo"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Einstellungen"
-      Background="#4DFFFFFF">
+      Title="Statistic">
 
     <Grid>
-        <Label Content="Label" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48" FontFamily="Arial"/>
+        <Label Content="Statistic" HorizontalAlignment="Left" Margin="382,201,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
